--- a/style.css
+++ b/style.css
@@ -12,4 +12,6 @@
   color: #ffffff;
   background-color: black;
   background-image: url("https://raw.githubusercontent.com/naochan83275/dash/main/image/IMG_0260.jpeg");
+  width: 100vw;
+  height: 100vh;
 }
